--- a/.brigade/project.yaml
+++ b/.brigade/project.yaml
@@ -17,3 +17,5 @@ spec:
   workerTemplate:
     git:
       cloneURL: https://github.com/brigadecore/badgr.git
+    jobPolicies:
+      allowPrivileged: true
